# flaskProject/swagger.yaml
@@ -20,13 +20,22 @@ security:
   - basicAuth: []
 
 paths:
-  /user/get:
+  /user/{username}:
     get:
       tags:
       - user
       summary: Get user
       description: Get information about user
       operationId: getUserByUsername
+      parameters:
+      - name: username
+        in: path
+        description: 'The name that needs to be fetched'
+        required: true
+        schema:
+          type: string
+          example: "username"
+
       responses:
         200:
           description: "Successful operation"
@@ -37,13 +46,22 @@ paths:
         401:
           $ref: '#/components/responses/InvalidCredentialsError'
 
-  /user/put:
+
     put:
       tags:
       - user
       summary: Update user
       description: Update your user
       operationId: updateUserByUsername
+
+      parameters:
+      - name: username
+        in: path
+        required: true
+        description: "The name that needs to be fetched"
+        schema:
+          type: string
+
       requestBody:
         description: Updated user object
         content:
@@ -62,13 +80,22 @@ paths:
         401:
           $ref: '#/components/responses/InvalidCredentialsError'
 
-  /user/delete:
+
     delete:
       tags:
         - user
       summary: Delete user
       description: Delete user by username
       operationId: deleteUser
+
+      parameters:
+      - name: username
+        in: path
+        required: true
+        description: "The name that needs to be fetched"
+        schema:
+          type: string
+
       responses:
         200:
           description: "Successful operation. User was deleted"
@@ -112,11 +139,21 @@ paths:
           description: Can't create wallet
 
 
+  /wallet/{name}:
     get:
       tags:
       - wallet
       summary: Get a wallet by name
       operationId: getWalletByName
+
+      parameters:
+      - name: name
+        in: path
+        required: true
+        description: "The name that needs to be fetched"
+        schema:
+          type: string
+
       responses:
         200:
           description: "Successful operation"
@@ -135,6 +172,14 @@ paths:
       - wallet
       summary: Update a wallet by name
       operationId: updateWalletByName
+
+      parameters:
+      - name: name
+        in: path
+        required: true
+        description: "The name that needs to be fetched"
+        schema:
+          type: string
 
       requestBody:
         description: Updated wallet object
@@ -164,6 +209,14 @@ paths:
       - wallet
       summary: Delete wallet by name
       operationId: deleteWalletByName
+
+      parameters:
+      - name: name
+        in: path
+        required: true
+        description: "The name that needs to be fetched"
+        schema:
+          type: string
 
       responses:
         200:
@@ -202,24 +255,6 @@ paths:
                 $ref: '#/components/schemas/Transfer'
         401:
           $ref: '#/components/responses/UnauthorizedError'
-          
-          
-    get:
-      tags:
-      - transfer
-      summary: Get a transfer by wallet id
-      operationId: getTransfer
-      responses:
-        200:
-          description: "Successful operation"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Transfer'
-        401:
-          $ref: '#/components/responses/UnauthorizedError'
-        404:
-          description: Wallet is not found.
 
 
   /auth/register:
@@ -285,6 +320,20 @@ paths:
       security: []
 
 
+  /auth/logout:
+    post:
+      tags:
+      - auth
+      summary: Logs current user out of session
+      operationId: logoutUser
+
+      responses:
+        200:
+          description: "Successful operation"
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+
+
 components:
   schemas:
     User:
@@ -339,7 +388,7 @@ components:
 
   responses:
     UnauthorizedError:
-      description: "Basic auth is failed"
+      description: "JWT token was not provided or it is invalid"
     InvalidCredentialsError:
       description: "Provided credentials are invalid"
     IncorrectStructureError:
